--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@
                 <div class="footer-col footer-contact">
                     <h4>Contact Us</h4>
                     <p><i class="fas fa-map-marker-alt"></i> 123 Healing Street, Wellness City</p>
-                    <p><i class="fas fa-phone"></i> (555) 123-4567</p>
+                    <p><i class="fas fa-phone"></i> +1 (613) 601-8185</p>
                     <p><i class="fas fa-envelope"></i> hello@ruachcounselling.com</p>
                     <p><i class="far fa-clock"></i> Mon-Fri: 9am-6pm</p>
                     <p><i class="fas fa-globe"></i> Weekend appointments available</p>
